@@ -6,6 +6,7 @@
 * Add - Update layout of the Multi-currency settings screen.
 * Fix - Fixed missing file error for removed CSS file.
 * Add - Currency deletion confirmation modal for currencies that are bound to an UPE method.
+* Fix - Currency switcher does not affect order confirmation screen prices.
 
 = 3.0.0 - 2021-09-16 =
 * Add - Download deposits report in CSV.
